[package]
name = "sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
strip = true
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
clearscreen = "1.0.9"
text_io = "0.1.10"
meval = "0.2.0"
